# django-deepcopy

./: README.md  django_deepcopy.py  pyproject.toml  pytest.ini
tests/: settings.py  test_basic.py  test_doctest.py
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py
