[tool.poetry]
name = "django-deepcopy"
version = "0.0.1"
description = "Allows deep copying Django database objects"
authors = ["Malthe Jørgensen <malthe.jorgensen@gmail.com>"]
license = "MIT"

packages = [
      { include = "django_deepcopy.py"},
]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
